디렉토리 얼라이어스 지정 기타 ui 수정, 타이핑 텍스트 컴포넌트 생성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     "jsx": "react-jsx",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@mui/*": ["./node_modules/@mui/*"],
+      "@components/*": ["./components/*"],
+      "@hooks/*": ["./hooks/*"],
     }
   },
   "include": [
