--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_ID }}
+          username: ${{ secrets.DOCKER_HUB_ID }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Build and Push (latest)
@@ -27,4 +27,4 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: docker.io/${{ secrets.DOCKERHUB_REGISTRY }}/${{secrets.DOCKERHUB_REPOSITORY}}:latest
+          tags: docker.io/${{ secrets.DOCKER_HUB_REGISTRY }}/${{secrets.DOCKER_HUB_REPOSITORY}}:latest
