--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      - name: Set datetime
+        id: date
+        run: echo "datetime=$(date +'%Y%m%d-%H%M%S')" >> $GITHUB_OUTPUT
+
       - name: Source download on Github
         uses: actions/checkout@v4
 
@@ -27,4 +31,4 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: docker.io/${{ secrets.DOCKER_HUB_REGISTRY }}/${{secrets.DOCKER_HUB_REPOSITORY}}:latest
+          tags: docker.io/${{ secrets.DOCKER_HUB_REGISTRY }}/${{secrets.DOCKER_HUB_REPOSITORY}}:${{ steps.date.outputs.datetime }}
