--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/lab": "^7.0.1-beta.18",
     "@mui/material": "^7.3.4",
+    "html-react-parser": "^5.2.7",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
