프로젝트 페이지 수정 파비콘 및 styleSheet 경로 변경 임포트 수정 swiperJS 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "@mui/*": ["./node_modules/@mui/*"],
       "@components/*": ["./components/*"],
       "@hooks/*": ["./hooks/*"],
+      "@styles/*": ["./public/styles/*"],
     }
   },
   "include": [
