--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "html-react-parser": "^5.2.7",
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
