react bits  라이브러리 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@components/*": ["./components/*"],
       "@hooks/*": ["./hooks/*"],
       "@styles/*": ["./public/styles/*"],
+      "@json/*": ["./json/*"],
     }
   },
   "include": [
