--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,3 +34,28 @@ jobs:
           tags: | 
             docker.io/${{ secrets.DOCKER_HUB_REGISTRY }}/${{secrets.DOCKER_HUB_REPOSITORY}}:latest
             docker.io/${{ secrets.DOCKER_HUB_REGISTRY }}/${{secrets.DOCKER_HUB_REPOSITORY}}:${{ steps.date.outputs.datetime }}
+
+      - name: Deploy On AWS EC2
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo docker login -u ${{ secrets.DOCKER_HUB_ID }} -p ${{ secrets.DOCKER_HUB_TOKEN }}
+            
+            # 기존 컨테이너 중지 및 삭제
+            sudo docker stop yh-portfolio || true
+            sudo docker rm yh-portfolio || true
+            
+            #이전 이미지 제거
+            sudo docker image prune -af
+            
+            # 최신 이미지 Pull
+            sudo docker pull ${{ secrets.DOCKER_HUB_REGISTRY }}/${{secrets.DOCKER_HUB_REPOSITORY}}:latest
+            
+            # 새 컨테이너 실행
+            sudo docker run -d \
+              --name yh-portfolio \
+              -p 3000:3000 \
+              ${{ secrets.DOCKER_HUB_REGISTRY }}/${{secrets.DOCKER_HUB_REPOSITORY}}:latest
