배포 조건 추가 (리드미, github actions 제외 처리)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,9 @@ name: yunhwan-portfolio-image-build
 on:
   push:
     branches: ["main"]
+    paths-ignore:
+      - '.github/**'
+      - '*.md'
 concurrency:  #작업 중복 실행 방지
   group: docker-build-${{ github.ref }}
   cancel-in-progress: true
