구글 태그 설정

--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@bybas/weather-icons": "^2.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/lab": "^7.0.1-beta.18",
     "@mui/material": "^7.3.4",
+    "@next/third-parties": "^16.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "html-react-parser": "^5.2.7",
     "motion": "^12.23.24",
-    "next": "16.0.10",
+    "next": "^16.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
