--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,11 @@
   "name": "Yunhwan Web Site",
   "short_name": "Yunhwan",
   "icons": [
-    { "src": "/favicon-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/favicon-512x512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
